<?xml version="1.0"?>
<package format="3">
  <name>keyboard_teleop</name>
  <version>1.0.0</version>
  <description>A ros keyboard teleop package</description>

  <maintainer email="federico.rollo@leonardo.com">Federico Rollo</maintainer>

  <license>TODO</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>


  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type> 
    <!-- <build_type condition="$ROS_VERSION == 2">ament_cmake_python</build_type>  -->
  </export>
</package>
